--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.data.rest.base-path=/api
 spring.datasource.platform=postgres
 spring.jpa.hibernate.ddl-auto=validate
 logging.level.org.springframework.web: DEBUG
+spring.mvc.hiddenmethod.filter.enabled=true
